# tello_aruco_localization

./: app_settings.ini  calibration.json  camera.json  main.py  map.json  mission.json  pyproject.toml  settings.json  tello_aruco_nav.ini
tello_aruco_nav/: aruco_localization.py  camera.py  drone_controller.py  exceptions.py  settings.py  setup.py  tello_localization.py  utils.py
tello_aruco_nav/common/: exceptions.py  setup.py  utils.py
tello_aruco_nav/modules/: aruco_localization.py  camera.py  drone_controller.py  flight_controller.py  gui.py  hud.py  mission_controller.py  mission_runner.py  plotter.py  tello.py  tello_controller.py  ui.py
tello_aruco_nav/runners/: calibration.py  flight.py  markers_generation.py
tello_aruco_nav/schemas/: calibration.py  map.py  mission.py
