[project]
name = "tello-aruco-nav"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "av>=14.2.0",
    "numpy>=2.2.3",
    "opencv-contrib-python>=4.11.0.86",
    "opencv-python>=4.11.0.86",
    "pydantic>=2.10.6",
    "pygame>=2.6.1",
    "rich>=13.9.4",
    "simple-pid>=2.0.1",
    "typer>=0.15.1",
]

[tool.mypy]
plugins = ["numpy.typing.mypy_plugin"]

[tool.ruff]
target-version = "py313"
